--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9829,15 +9829,18 @@ div.pagination {
     color: white;
     background-color: #00B0B9 !important; }
 
-.contest {
-  margin-left: -30px;
-  margin-right: -30px; }
-  .contest .woobox-offer {
-    display: block !important;
-    margin: auto; }
-    @media screen and (max-width: 768px) {
-      .contest .woobox-offer {
-        margin-top: 100px; } }
+@media screen and (max-width: 1199px) {
+  .contest {
+    margin-left: -30px;
+    margin-right: -30px; } }
+
+.contest .woobox-offer {
+  display: block !important;
+  margin: auto;
+  min-height: 800px; }
+  @media screen and (max-width: 768px) {
+    .contest .woobox-offer {
+      margin-top: 100px; } }
 
 header {
   width: 100%;
