--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9847,6 +9847,20 @@ header {
   header a.btn-red {
     font-size: 1em;
     letter-spacing: .5px; }
+  header a.menu-search {
+    background: url(../img/icons/search.svg) no-repeat center center;
+    background-size: 90%;
+    margin-top: 15px;
+    width: 28px;
+    height: 28px;
+    margin-right: 15px; }
+    @media screen and (max-width: 767px) {
+      header a.menu-search {
+        margin-top: 25px; } }
+    header a.menu-search.close {
+      background: url(../img/icons/mobile-menu-close.svg) no-repeat center center;
+      background-size: 90%;
+      opacity: 1; }
   header a.menu-trigger {
     background: url(../img/icons/mobile-menu.svg) no-repeat center center;
     background-size: 90%;
