--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -854,13 +854,21 @@ div.pagination {
 
 .contest {
 	@media screen and (max-width: $screen-md-max) {
-		margin-left: -30px;
-		margin-right: -30px;
+		//margin-left: -30px;
+		//margin-right: -30px;
+		padding-right: 0;
+		padding-left: 0;
+
+		.container {
+			padding-right: 0;
+			padding-left: 0;
+		}
 	}
 	.woobox-offer {
 		display: block !important;
 		margin: auto;
 		min-height: 800px;
+		max-width: 100%;
 		@media screen and (max-width: 768px) {
 			margin-top: 100px;
 		}
