--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -205,11 +205,22 @@ header:not(.white) {
 			margin: 0;
 			li {
 				height: 100px;
+				border-top: 1px solid $grey;
 				padding: 32px;
 				text-align: start;
 				font-size: 2.4em;
+				color: $grey;
+				font-weight: bolder;
 				a {
 					color: $grey;
+					text-decoration: none;
+				}
+				&:hover {
+					background-color: $grey;
+					color: white;
+					a {
+						color: white;
+					}
 				}
 			}
 		}
