--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -209,7 +209,8 @@ header:not(.white) {
 			li {
 				height: 100px;
 				border-top: 1px solid $grey;
-				padding: 32px;
+				padding: 32px 0px 0px 75px;
+				position: relative;
 				text-align: start;
 				font-size: 2.4em;
 				color: $grey;
@@ -218,10 +219,68 @@ header:not(.white) {
 					color: $grey;
 					text-decoration: none;
 				}
+				&:before {
+				    position: absolute;
+				    width: 35px;
+				    height: 35px;
+				    top: 27px;
+					left: 20px;
+					content: " ";
+				}
+				&.users {
+					&:before {
+						background: url(../img/icons/users.svg) no-repeat center center;
+        			}
+				}
+				&.search-nav {
+					&:before {
+            			background: url(../img/icons/search-nav.svg) no-repeat center center;
+        			}
+				}
+				&.blog {
+					&:before {
+            			background: url(../img/icons/blog.svg) no-repeat center center;
+        			}
+				}
+				&.cgu {
+					&:before {
+            			background: url(../img/icons/mention-legales.svg) no-repeat center center;
+        			}
+				}
+				&.salon {
+					&:before {
+            			background: url(../img/icons/salon.svg) no-repeat center center;
+        			}
+				}
 				&:hover {
 					background-color: $grey;
 					color: white;
 					text-decoration: none;
+					&.users {
+						&:before {
+	        				background: url(../img/icons/users-white.svg) no-repeat center center;
+	        			}
+					}
+					&.search-nav {
+						&:before {
+	        				background: url(../img/icons/search-nav-white.svg) no-repeat center center;
+	        			}
+					}
+					&.blog {
+						&:before {
+	        				background: url(../img/icons/blog-white.svg) no-repeat center center;
+	        			}
+					}
+					&.cgu {
+						&:before {
+	        				background: url(../img/icons/mention-legales-white.svg) no-repeat center center;
+	        			}
+					}
+					&.salon {
+						&:before {
+	        				background: url(../img/icons/salon-white.svg) no-repeat center center;
+	        			}
+					}
 				}
 			}
 		}
