--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10048,29 +10048,39 @@ header:not(.white) .dropdown-menu {
           left: 20px;
           content: " "; }
         .mobile-nav .mobile-menu ul li.users:before {
-          background: url(../img/icons/users.svg) no-repeat center center; }
+          background: url(../img/icons/users.svg) no-repeat center center;
+          background-size: contain; }
         .mobile-nav .mobile-menu ul li.search-nav:before {
-          background: url(../img/icons/search-nav.svg) no-repeat center center; }
+          background: url(../img/icons/search-nav.svg) no-repeat center center;
+          background-size: contain; }
         .mobile-nav .mobile-menu ul li.blog:before {
-          background: url(../img/icons/blog.svg) no-repeat center center; }
+          background: url(../img/icons/blog.svg) no-repeat center center;
+          background-size: contain; }
         .mobile-nav .mobile-menu ul li.cgu:before {
-          background: url(../img/icons/mention-legales.svg) no-repeat center center; }
+          background: url(../img/icons/mention-legales.svg) no-repeat center center;
+          background-size: contain; }
         .mobile-nav .mobile-menu ul li.salon:before {
-          background: url(../img/icons/salon.svg) no-repeat center center; }
+          background: url(../img/icons/salon.svg) no-repeat center center;
+          background-size: contain; }
         .mobile-nav .mobile-menu ul li:hover {
           background-color: #c4c4c4;
           color: white;
           text-decoration: none; }
           .mobile-nav .mobile-menu ul li:hover.users:before {
-            background: url(../img/icons/users-white.svg) no-repeat center center; }
+            background: url(../img/icons/users-white.svg) no-repeat center center;
+            background-size: contain; }
           .mobile-nav .mobile-menu ul li:hover.search-nav:before {
-            background: url(../img/icons/search-nav-white.svg) no-repeat center center; }
+            background: url(../img/icons/search-nav-white.svg) no-repeat center center;
+            background-size: contain; }
           .mobile-nav .mobile-menu ul li:hover.blog:before {
-            background: url(../img/icons/blog-white.svg) no-repeat center center; }
+            background: url(../img/icons/blog-white.svg) no-repeat center center;
+            background-size: contain; }
           .mobile-nav .mobile-menu ul li:hover.cgu:before {
-            background: url(../img/icons/mention-legales-white.svg) no-repeat center center; }
+            background: url(../img/icons/mention-legales-white.svg) no-repeat center center;
+            background-size: contain; }
           .mobile-nav .mobile-menu ul li:hover.salon:before {
-            background: url(../img/icons/salon-white.svg) no-repeat center center; }
+            background: url(../img/icons/salon-white.svg) no-repeat center center;
+            background-size: contain; }
   .mobile-nav .search-menu {
     padding-bottom: 30px;
     background-color: white;
@@ -10095,10 +10105,29 @@ header:not(.white) .dropdown-menu {
     .mobile-nav .search-menu .searchbar {
       float: none;
       margin: 0 auto; }
+      .mobile-nav .search-menu .searchbar div:before {
+        z-index: 1;
+        position: absolute;
+        width: 23px;
+        height: 23px;
+        top: 20px;
+        left: 20px;
+        content: " "; }
+      .mobile-nav .search-menu .searchbar div:nth-child(2):before {
+        background: url(../img/icons/localisation.svg) no-repeat center center;
+        background-size: contain; }
+      .mobile-nav .search-menu .searchbar div:nth-child(3):before {
+        background: url(../img/icons/users.svg) no-repeat center center;
+        background-size: contain; }
       .mobile-nav .search-menu .searchbar input {
+        padding-left: 50px;
         width: 100%;
         height: 65px;
-        margin-bottom: 20px; }
+        margin-bottom: 20px;
+        border-bottom: 1px solid #e6e6e6;
+        border-left: none;
+        border-right: none;
+        border-top: none; }
       .mobile-nav .search-menu .searchbar .btn-red {
         height: 65px;
         line-height: 3em;
@@ -10107,26 +10136,36 @@ header:not(.white) .dropdown-menu {
         text-transform: uppercase; }
       .mobile-nav .search-menu .searchbar div.input-group {
         float: left;
-        margin-bottom: 20px; }
+        padding-left: 15px; }
         .mobile-nav .search-menu .searchbar div.input-group input {
           width: 100%;
           margin: 0;
-          padding-left: 15px;
           border-right: 0; }
         .mobile-nav .search-menu .searchbar div.input-group .input-group-addon {
           background: url(../img/icon-location.png) no-repeat center center;
           background-color: white;
           width: 60px;
           background-size: 40%;
-          border: 2px solid #e6e6e6;
-          border-left-width: 1px; }
+          border: none;
+          border-bottom: 1px solid #e6e6e6;
+          border-left: 1px solid #e6e6e6; }
       .mobile-nav .search-menu .searchbar .mobile-categories {
         padding: 0; }
+        .mobile-nav .search-menu .searchbar .mobile-categories:before {
+          background: url(../img/icons/search-nav.svg) no-repeat center center;
+          background-size: contain; }
         .mobile-nav .search-menu .searchbar .mobile-categories select {
+          appearance: none;
+          -moz-appearance: none;
+          -webkit-appearance: none;
+          -o-appearance: none;
           width: 100%;
+          padding-left: 50px;
           background-color: white;
           height: 65px;
-          border: 2px solid #e6e6e6;
+          border: 1px solid #e6e6e6;
+          border-left: none;
+          border-right: none;
           font-family: "Lato", sans-serif;
           font-weight: 700;
           font-size: 1.4em;
