--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -230,26 +230,31 @@ header:not(.white) {
 				&.users {
 					&:before {
 						background: url(../img/icons/users.svg) no-repeat center center;
+						background-size: contain;
         			}
 				}
 				&.search-nav {
 					&:before {
             			background: url(../img/icons/search-nav.svg) no-repeat center center;
+            			background-size: contain;
         			}
 				}
 				&.blog {
 					&:before {
             			background: url(../img/icons/blog.svg) no-repeat center center;
+            			background-size: contain;
         			}
 				}
 				&.cgu {
 					&:before {
             			background: url(../img/icons/mention-legales.svg) no-repeat center center;
+            			background-size: contain;
         			}
 				}
 				&.salon {
 					&:before {
             			background: url(../img/icons/salon.svg) no-repeat center center;
+            			background-size: contain;
         			}
 				}
 				&:hover {
@@ -259,26 +264,31 @@ header:not(.white) {
 					&.users {
 						&:before {
 	        				background: url(../img/icons/users-white.svg) no-repeat center center;
+	        				background-size: contain;
 	        			}
 					}
 					&.search-nav {
 						&:before {
 	        				background: url(../img/icons/search-nav-white.svg) no-repeat center center;
+	        				background-size: contain;
 	        			}
 					}
 					&.blog {
 						&:before {
 	        				background: url(../img/icons/blog-white.svg) no-repeat center center;
+	        				background-size: contain;
 	        			}
 					}
 					&.cgu {
 						&:before {
 	        				background: url(../img/icons/mention-legales-white.svg) no-repeat center center;
+	        				background-size: contain;
 	        			}
 					}
 					&.salon {
 						&:before {
 	        				background: url(../img/icons/salon-white.svg) no-repeat center center;
+	        				background-size: contain;
 	        			}
 					}
 				}
@@ -311,10 +321,39 @@ header:not(.white) {
 		.searchbar {
 			float: none;
 			margin: 0 auto;
+			div {
+				&:before {
+					z-index: 1;
+				    position: absolute;
+				    width: 23px;
+				    height: 23px;
+				    top: 20px;
+					left: 20px;
+					content: " ";
+				}
+				&:nth-child(2) {
+					&:before {
+
+						background: url(../img/icons/localisation.svg) no-repeat center center;
+						background-size: contain;
+					}
+				}
+				&:nth-child(3) {
+					&:before {
+						background: url(../img/icons/users.svg) no-repeat center center;
+						background-size: contain;
+					}
+				}
+			}
 			input {
+				padding-left: 50px;
 				width: 100%;
 				height: 65px;
 				margin-bottom: 20px;
+				border-bottom: 1px solid #e6e6e6;
+				border-left: none;
+				border-right: none;
+				border-top: none; 
 			}
 			.btn-red {
 				height: 65px;
@@ -325,11 +364,10 @@ header:not(.white) {
 			}
 			div.input-group {
 				float: left;
-				margin-bottom: 20px;
+				padding-left: 15px;
 				input {
 					width: 100%;
 					margin: 0;
-					padding-left: 15px;
 					border-right: 0;
 				}
 				.input-group-addon {
@@ -337,17 +375,26 @@ header:not(.white) {
 					background-color: white;
 					width: 60px;
 					background-size: 40%;
-				    border: 2px solid #e6e6e6;
-				    border-left-width: 1px;
+					border: none;
+				    border-bottom: 1px solid #e6e6e6;
+					border-left: 1px solid #e6e6e6;
 				}
 			}
 			.mobile-categories {
+				&:before {
+					background: url(../img/icons/search-nav.svg) no-repeat center center;
+					background-size: contain;
+				}
 				padding: 0;
 				select {
+					@include appearance(none);
 					width: 100%;
+					padding-left: 50px;
 					background-color: white;
 					height: 65px;
-					border: 2px solid #e6e6e6;
+					border: 1px solid #e6e6e6;
+					border-left: none;
+					border-right: none;
 					font-family: "Lato", sans-serif;
 					font-weight: 700;
 					font-size: 1.4em;
