--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9870,7 +9870,7 @@ header {
     margin-right: 15px; }
     @media screen and (max-width: 767px) {
       header a.menu-trigger {
-        margin-top: 25px; } }
+        margin-top: 19px; } }
     header a.menu-trigger.close {
       background: url(../img/icons/mobile-menu-close.svg) no-repeat center center;
       background-size: 90%;
@@ -10006,9 +10006,10 @@ header:not(.white) .dropdown-menu {
       background: transparent; }
 
 .mobile-nav {
-  position: relative; }
+  position: fixed;
+  z-index: 200; }
   .mobile-nav header {
-    height: 85px;
+    height: 65px;
     background-color: white;
     border-bottom: 1px solid #dbdbdb;
     margin-left: -15px;
@@ -10017,7 +10018,7 @@ header:not(.white) .dropdown-menu {
     .mobile-nav header a.logo {
       background: url(../img/logo-red.png) no-repeat center left;
       background-size: 100%;
-      margin-top: 20px; }
+      margin-top: 12px; }
   .mobile-nav .mobile-menu {
     background-color: white;
     margin-left: -15px;
@@ -10029,12 +10030,12 @@ header:not(.white) .dropdown-menu {
       .mobile-nav .mobile-menu ul a, .mobile-nav .mobile-menu ul a:hover, .mobile-nav .mobile-menu ul a:focus {
         text-decoration: none; }
       .mobile-nav .mobile-menu ul li {
-        height: 100px;
+        height: 50px;
         border-top: 1px solid #c4c4c4;
-        padding: 32px 0px 0px 75px;
+        padding: 12px 0px 0px 50px;
         position: relative;
         text-align: start;
-        font-size: 2.4em;
+        font-size: 2em;
         color: #c4c4c4;
         font-weight: bolder; }
         .mobile-nav .mobile-menu ul li a {
@@ -10042,10 +10043,10 @@ header:not(.white) .dropdown-menu {
           text-decoration: none; }
         .mobile-nav .mobile-menu ul li:before {
           position: absolute;
-          width: 35px;
-          height: 35px;
-          top: 27px;
-          left: 20px;
+          width: 17px;
+          height: 17px;
+          top: 18px;
+          left: 10px;
           content: " "; }
         .mobile-nav .mobile-menu ul li.users:before {
           background: url(../img/icons/users.svg) no-repeat center center;
@@ -10081,6 +10082,18 @@ header:not(.white) .dropdown-menu {
           .mobile-nav .mobile-menu ul li:hover.salon:before {
             background: url(../img/icons/salon-white.svg) no-repeat center center;
             background-size: contain; }
+    .mobile-nav .mobile-menu div.download {
+      background-color: #fe5b5f;
+      height: 320px;
+      margin-top: 110px; }
+      .mobile-nav .mobile-menu div.download p {
+        display: inline-block;
+        margin-top: 32px;
+        font-size: 2em;
+        text-align: center;
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto; }
   .mobile-nav .search-menu {
     padding-bottom: 30px;
     background-color: white;
@@ -10088,20 +10101,14 @@ header:not(.white) .dropdown-menu {
     width: 100vw;
     overflow-x: auto; }
     .mobile-nav .search-menu h2 {
-      margin: 40px 0;
+      margin: 40px auto;
       font-family: "Lato", sans-serif;
       font-weight: 700;
-      font-size: 2.6em;
+      font-size: 1.9em;
       letter-spacing: 4px;
       text-transform: uppercase;
-      color: #535353;
+      color: #fe5b5f;
       text-align: center; }
-    .mobile-nav .search-menu .hr {
-      width: 96px;
-      height: 1px;
-      background: #535353;
-      margin: 0 auto 40px;
-      display: block; }
     .mobile-nav .search-menu .searchbar {
       float: none;
       margin: 0 auto; }
