--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -26,7 +26,7 @@ header {
 
 		margin-top: 15px;
 		@media screen and (max-width: $screen-xs-max) {
-			margin-top: 25px;
+			margin-top: 19px;
 		}
 		width: 35px;
 		height: 25px;
@@ -180,9 +180,10 @@ header:not(.white) {
 }
 
 .mobile-nav {
-	position: relative;
+	position: fixed;
+	z-index: 200;
 	header {
-		height: 85px;
+		height: 65px;
 		background-color: white;
 		border-bottom: 1px solid #dbdbdb;
 		margin-left: -15px; margin-right: -15px;
@@ -191,7 +192,7 @@ header:not(.white) {
 		a.logo {
 			background: url(../img/logo-red.png) no-repeat center left;
 			background-size: 100%;
-			margin-top: 20px;
+			margin-top: 12px;
 		}
 	}
 	.mobile-menu {
@@ -207,12 +208,12 @@ header:not(.white) {
 				text-decoration: none;
 			}
 			li {
-				height: 100px;
+				height: 50px;
 				border-top: 1px solid $grey;
-				padding: 32px 0px 0px 75px;
+				padding: 12px 0px 0px 50px;
 				position: relative;
 				text-align: start;
-				font-size: 2.4em;
+				font-size: 2em;
 				color: $grey;
 				font-weight: bolder;
 				a {
@@ -221,10 +222,10 @@ header:not(.white) {
 				}
 				&:before {
 				    position: absolute;
-				    width: 35px;
-				    height: 35px;
-				    top: 27px;
-					left: 20px;
+				    width: 17px;
+				    height: 17px;
+				    top: 18px;
+					left: 10px;
 					content: " ";
 				}
 				&.users {
@@ -294,6 +295,20 @@ header:not(.white) {
 				}
 			}
 		}
+		div.download {
+			background-color: $hairfie;
+			height: 320px;
+			margin-top: 110px;
+			p {
+				display: inline-block;
+				margin-top: 32px;
+				font-size: 2em;
+				text-align: center;
+				width: 70%;
+    			margin-left: auto;
+    			margin-right: auto;
+			}
+		}
 	}
 	.search-menu {
 			padding-bottom: 30px;
@@ -302,21 +317,14 @@ header:not(.white) {
 			width: 100vw;
 			overflow-x: auto;
 		h2 {
-			margin: 40px 0;
+			margin: 40px auto;
 			font-family: $font-second;
 			font-weight: $latoBold;
-			font-size: 2.6em;
+			font-size: 1.9em;
 			letter-spacing: 4px;
 			text-transform: uppercase;
-			color: #535353;
+			color: $hairfie;
 			text-align: center;
-		}
-		.hr {
-			width: 96px;
-			height: 1px;
-			background: #535353;
-			margin: 0 auto 40px;
-			display: block;
 		}
 		.searchbar {
 			float: none;
