--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -315,6 +315,7 @@ header:not(.white) {
 			background-color: white;
 			margin-left: -15px;
 			width: 100vw;
+			min-height: 100vh;
 			overflow-x: auto;
 		h2 {
 			margin: 40px auto;
