--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9851,6 +9851,12 @@ iframe {
   width: 100px !important;
   *width: 100% !important; }
 
+input, input:matches([type="password"], [type="search"]) {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none; }
+
 header {
   width: 100%;
   height: 60px;
@@ -10111,6 +10117,7 @@ header:not(.white) .dropdown-menu {
     background-color: white;
     margin-left: -15px;
     width: 100vw;
+    min-height: 100vh;
     overflow-x: auto; }
     .mobile-nav .search-menu h2 {
       margin: 40px auto;
