--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -318,6 +318,7 @@ header:not(.white) {
 			min-height: 100vh;
 			overflow-x: auto;
 		h2 {
+			width: 75%;
 			margin: 40px auto;
 			font-family: $font-second;
 			font-weight: $latoBold;
