--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10114,6 +10114,7 @@ header:not(.white) .dropdown-menu {
     min-height: 100vh;
     overflow-x: auto; }
     .mobile-nav .search-menu h2 {
+      width: 75%;
       margin: 40px auto;
       font-family: "Lato", sans-serif;
       font-weight: 700;
