--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -258,6 +258,12 @@ header:not(.white) {
             			background-size: contain;
         			}
 				}
+				&.hairfies {
+					&:before {
+            			background: url(../img/icons/mobile/hairfies.svg) no-repeat center center;
+            			background-size: contain;
+        			}
+				}
 				&:hover {
 					background-color: $grey;
 					color: white;
