--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10075,6 +10075,9 @@ header:not(.white) .dropdown-menu {
         .mobile-nav .mobile-menu ul li.salon:before {
           background: url(../img/icons/salon.svg) no-repeat center center;
           background-size: contain; }
+        .mobile-nav .mobile-menu ul li.hairfies:before {
+          background: url(../img/icons/mobile/hairfies.svg) no-repeat center center;
+          background-size: contain; }
         .mobile-nav .mobile-menu ul li:hover {
           background-color: #c4c4c4;
           color: white;
