--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9451,6 +9451,13 @@ figure {
   background-color: #fc5a5f;
   border-radius: 100%; }
 
+.pricetag2 {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  padding: 15px 10px;
+  text-align: center; }
+
 .tag {
   display: inline-block;
   padding: 2px 10px;
