--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -12,6 +12,7 @@ $bgfooter: #353535;
 $grey: #c4c4c4;
 $lightgrey: #898989;
 $darkgrey: #595959;
+$dark-header: #343434;
 $lightblue: #84F0F3;
 $font-color: #595959;
 $font-main: 'Source Sans Pro', sans-serif;
