--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9852,10 +9852,22 @@ iframe {
   *width: 100% !important; }
 
 header {
-  width: 100%;
-  height: 60px;
-  background-color: transparent;
-  font-size: 1em; }
+  padding-bottom: 10px; }
+  header div.dark-header {
+    background-color: #343434;
+    height: 40px;
+    width: 100vw; }
+    header div.dark-header div.container div {
+      display: inline-block;
+      text-align: start;
+      font-size: 1.6em;
+      font-weight: bold; }
+      header div.dark-header div.container div a {
+        color: white;
+        text-decoration: none;
+        display: inline-block;
+        padding-top: 8px;
+        margin-right: 20px; }
   header a.btn-red {
     font-size: 1em;
     letter-spacing: .5px; }
@@ -9972,8 +9984,6 @@ header {
         top: 0;
         background: #fff;
         z-index: -1; }
-      header.white > .row:first-child:after {
-        height: 60px; }
     header.white .logo {
       background: url(../img/logo-red.png) no-repeat center center;
       background-size: 100%; }
@@ -10024,8 +10034,6 @@ header:not(.white) .dropdown-menu {
     height: 65px;
     background-color: white;
     border-bottom: 1px solid #dbdbdb;
-    margin-left: -15px;
-    margin-right: -15px;
     width: 100vw; }
     .mobile-nav header a.logo {
       background: url(../img/logo-red.png) no-repeat center left;
@@ -10033,7 +10041,6 @@ header:not(.white) .dropdown-menu {
       margin-top: 12px; }
   .mobile-nav .mobile-menu {
     background-color: white;
-    margin-left: -15px;
     width: 100vw;
     height: 0;
     overflow-x: auto; }
@@ -10112,7 +10119,6 @@ header:not(.white) .dropdown-menu {
   .mobile-nav .search-menu {
     padding-bottom: 30px;
     background-color: white;
-    margin-left: -15px;
     width: 100vw;
     min-height: 100vh;
     overflow-x: auto; }
