--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -1,4 +1,23 @@
 header {
+	padding-bottom: 10px;
+	div.dark-header {
+		background-color: $dark-header;
+		height: 40px;
+		width: 100vw;
+		div.container div {
+			display: inline-block;
+			text-align: start;
+    		font-size: 1.6em;
+    		font-weight: bold;
+	    	a {
+				color: white;
+				text-decoration: none;
+				display: inline-block;
+				padding-top: 8px;
+				margin-right: 20px;
+			}
+		}
+	}
 	a.btn-red {
 		font-size: 1em;
 		letter-spacing: .5px;
@@ -37,10 +56,6 @@ header {
 			opacity: 1;
 		}
 	}
-	$headerHeight: 60px;
-	width: 100%;height: $headerHeight;
-	background-color: transparent;
-	font-size: 1em;
 	.logo {
 		background: url(../img/logo.png) no-repeat center center;
 		width: 128px; height: 41px; margin-top: 9px;display: block;
@@ -115,10 +130,6 @@ header {
 
 		> .row:first-child {
 			@include fullWidthBg(#fff);
-
-			&:after {
-				height: $headerHeight;
-			}
 		}
 
 		.logo {
@@ -186,7 +197,6 @@ header:not(.white) {
 		height: 65px;
 		background-color: white;
 		border-bottom: 1px solid #dbdbdb;
-		margin-left: -15px; margin-right: -15px;
 		width: 100vw;
 
 		a.logo {
@@ -197,7 +207,6 @@ header:not(.white) {
 	}
 	.mobile-menu {
 		background-color: white;
-		margin-left: -15px;
 		width: 100vw;
 		height: 0;
 		overflow-x: auto;
@@ -319,7 +328,6 @@ header:not(.white) {
 	.search-menu {
 			padding-bottom: 30px;
 			background-color: white;
-			margin-left: -15px;
 			width: 100vw;
 			min-height: 100vh;
 			overflow-x: auto;
