--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -16,7 +16,8 @@ header {
 				padding-top: 8px;
 				margin-right: 20px;
 			}
-			li.user {
+			div.user {
+				height: initial;
 				display: inline-block;
 				color: white;
 				div {
